syntax = "proto3";

option csharp_namespace = "TravixBackend.UserService.API.Protos";

package protos.usergrpcService;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service UserGrpcService {
    rpc SingIn(SignInRequest) returns (SignInResponse);
    rpc SingUp(SignUpRequest) returns (google.protobuf.Empty);
}

message SignInRequest {
    google.protobuf.StringValue userName = 1;
    google.protobuf.StringValue password = 2;
}

message SignInResponse {
    google.protobuf.StringValue token = 1;
}

message SignUpRequest {
    google.protobuf.StringValue firstName = 1;
    google.protobuf.StringValue lastName = 2;
    google.protobuf.StringValue phone = 3;
    google.protobuf.StringValue userName = 4;
    google.protobuf.StringValue password = 5;
}

